--- a/javascript8.html
+++ b/javascript8.html
@@ -69,6 +69,27 @@
         }
         console.log(y)
 
+
+        var m = "icecream"
+        var n = ""
+        for(var i=0;i<=m.length-1;i++){
+            if(i===m.indexOf(m[i]) && i===m.lastIndexOf(m[i])){
+                n = n+m[i]
+
+            }
+        }
+        console.log(n)
+
+
+        var l = "icecream"
+        var p = ""
+        for(var i=0;i<=l.length-1;i++){
+            if(l[i]!=="c"){
+                p = p+l[i]
+            }
+        }
+        console.log(p)
+
     </script>
 </body>
 </html>
